# threepenny-gui-electron-example

./: LICENSE  README.md  electron.js  package.json  threepenny-gui-electron-example.cabal
app/: Main.hs
src/: Example.hs
