name:                threepenny-gui-electron-example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/threepenny-gui-electron-example#readme
license:             BSD3
license-file:        LICENSE
author:              Jeremy Barisch Rooney
maintainer:          barischj@tcd.ie
copyright:           2017 Jeremy Barisch Rooney
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Example
  build-depends:       base >= 4.7 && < 5
                     , threepenny-gui
  default-language:    Haskell2010

executable threepenny-gui-electron-example-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , threepenny-gui-electron-example
  default-language:    Haskell2010

test-suite threepenny-gui-electron-example-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , threepenny-gui-electron-example
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/threepenny-gui-electron-example
